--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,8 +13,8 @@
             "program": "src/main.go",
             "args": [
                 //"/home/jcdwyer/tmp/2024_12_22_07_38_04.json"
-                "${workspaceFolder}/test.json",
-                "${workspaceFolder}/rider.json"
+                "${workspaceFolder}/test_data/test.json",
+                "${workspaceFolder}/test_data/rider.json"
                 ]
         }
     ]
