--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "go.coverOnSingleTest": true,
     "go.coverShowCounts": true,
     "go.coverOnSingleTestFile": true,
-    "go.coverMode": "atomic"
+    "go.coverMode": "atomic",
 }
