--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,9 +29,11 @@ jobs:
         cd src
         go test -v -coverprofile=coverage.out -covermode=atomic ./...
 
-    - name: Upload Coverage to Codecov
-      uses: codecov/codecov-action@v3
+    - name: Upload Coverage Report
+      uses: actions/upload-artifact@v4
       with:
-        file: ./src/coverage.out
-        flags: unittests
-        fail_ci_if_error: true
+        name: coverage-report
+        path: src/coverage.html
+        retention-days: 7    
+
+
