--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,8 +13,9 @@
             "program": "src/main.go",
             "args": [
                 //"/home/jcdwyer/tmp/2024_12_22_07_38_04.json"
-                "${workspaceFolder}/test_data/test.fit",
-                "${workspaceFolder}/test_data/rider.json"
+                "${workspaceFolder}/test_data/data/activity_20250202.fit",
+                "${workspaceFolder}/test_data/rider/rider.json",
+                "${workspaceFolder}/test_data/data"
                 ]
         }
     ]
